# space_invaders_sdl

./: .gitignore  CMakeLists.txt  README.md  UdacityRubric.md  install_dependencies_linux.sh  install_dependencies_macos.sh  install_depenendencies_linux.sh  play_linux.sh
include/: cleanup.h  logger.h  res_path.h  sdl_loader.h
src/: CMakeLists.txt  alien.cpp  alien.h  audio.cpp  audio.h  base_game_object.cpp  base_game_object.h  bullet.cpp  bullet.h  controller.cpp  controller.h  game.cpp  game.h  game_over_scene.cpp  game_over_scene.h  game_scene.cpp  game_scene.h  hud_manager.cpp  hud_manager.h  main.cpp  obstacle.h  player.cpp  scene.h  score_entry.h  score_manager.cpp  score_manager.h
src/game_objects/: alien.cpp  alien.h  base_game_object.cpp  base_game_object.h  bullet.cpp  bullet.h  obstacle.cpp  obstacle.h  player.cpp  player.h
src/scenes/: game_over_scene.cpp  game_over_scene.h  game_scene.cpp  game_scene.h  scene.h
